# packrest

./: .gitignore  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml
app/: globals.css  layout.tsx  page.tsx
app/[api]/: page.tsx
app/[api]/[operationId]/: page.tsx
app/api-view/: page.tsx
app/api/apis/: route.ts
app/api/bruno/export/: route.ts
app/api/config/: route.ts
app/api/endpoints/: route.ts
app/api/gitlab/: route.ts
app/api/gitlab/releases/: route.ts
app/api/gitlab/sync/: route.ts
app/api/proxy/: route.ts
app/api/sync-specs/: route.ts
app/api/token/: route.ts
app/collections/: page.tsx
app/endpoint/: page.tsx
app/help/: page.tsx
app/parcours/: page.tsx
app/settings/: page.tsx
components/: BrunoExportButton.tsx  Card.tsx  ConfirmDialog.tsx  EnvSwitcher.tsx  Field.tsx  FieldCombobox.tsx  FieldGenerator.tsx  FieldOptionsContext.tsx  FileResponse.tsx  HalLinks.tsx  HeaderEditor.tsx  IdCollector.tsx  JsonEditor.tsx  JsonView.tsx  Markdown.tsx  MethodBadge.tsx  MultipartBodySection.tsx  ParcoursAutoPanel.tsx  ParcoursContextPanel.tsx  ParcoursDocuments.tsx  ParcoursModePanel.tsx  ParcoursSelect.tsx  ParcoursStepper.tsx  PromptDialog.tsx  RequestBuilder.tsx  ResponseExportButton.tsx  ResponsePanel.tsx  SchemaField.tsx  ScopeSelector.tsx  StatusBadge.tsx  SyncDiff.tsx  Tabs.tsx  ThemeToggle.tsx  TokenInspector.tsx  TokenStatus.tsx  UuidGenerator.tsx  app-shell.tsx  tauri-provider.tsx
components/ui/: alert.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sonner.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
hooks/: use-app-info.ts  use-hal-navigation.ts  use-request-actions.ts  use-request-execution.ts  use-token.ts  use-update-notifier.ts  use-update-notifier.tsx
lib/: app-version.ts  bruno-export.ts  bruno.ts  config.ts  curl.ts  deref.ts  design.ts  dialog.ts  env.ts  example-extractor.ts  exporter.ts  fake-fields.ts  github.ts  gitlab.ts  hal.ts  http.ts  humanize.ts  id-collector.ts  jwt.ts  multipart.ts  net.ts  opener.ts  operation-fetch.ts  parcours-auto.ts  parcours-documents.ts  parcours.ts  platform.ts  postman.ts  schema-constraints.ts  schema-normalize.ts  spec-diff-core.d.mts  spec-diff-core.mjs  spec-diff.ts  specs-fs.ts  specs.ts  status-help.ts  storage.ts  store.ts  sync-constants.json  sync.ts  (+6 more)
lib/__tests__/: parcours-auto.test.ts  parcours-context.test.ts  parcours-documents.test.ts  schema-null-collapse.test.ts
openspec/changes/add-response-export/: design.md  tasks.md
openspec/changes/archive/2026-07-06-robust-bruno-exchange/: .openspec.yaml  README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-decompose-request-builder/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-remove-spec-seed/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-share-spec-diff-core/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/specs/bruno-collection-exchange/: spec.md
openspec/specs/request-builder/: spec.md
openspec/specs/response-export/: spec.md
openspec/specs/spec-diff-consistency/: spec.md
openspec/specs/spec-sourcing/: spec.md
public/specs/: contract.yaml  document.yaml  manifest.json  order-book.yaml  person.yaml  product.yaml  service-request.yaml  webhook.yaml
scripts/: copy-specs.mjs  release-notes.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/e2e/: a11y.spec.ts  collections.spec.ts  home.spec.ts  responsive.spec.ts  settings.spec.ts  shell.spec.ts  theme.spec.ts  topbar-tools.spec.ts  visual.spec.ts
tests/support/: helpers.ts
(+11 files in other folders)
